fix: decrease spacing between accordion items

--- a/src/components/accordion/AccordionItem.css
+++ b/src/components/accordion/AccordionItem.css
@@ -7,12 +7,11 @@ ul {
 
 li {
   border-bottom: 1px solid var(--light-pink);
-  padding-bottom: 20px;
 }
 
 li:last-of-type {
   border-bottom: none;
-  padding-bottom: 0;
+
 }
 
 .accordion__title {
